<resources>
    <string name="app_name">Tip Time</string>
    <string name="idCostOfService">Cost Of Service :</string>
    <string name="idTextHowWasTheService">How was the service ?</string>
    <string name="idRoundUpTip">Round Up Tip ?</string>
    <string name="idSwitchRoundUpTip">Amazing (%20)</string>
    <string name="idRadioGood">Good (%18)</string>
    <string name="idRadioOkay">Okay (%15)</string>
    <string name="idButtonCalculate">Calculate</string>
    <string name="idInputNumberCost">Enter the cost</string>
    <string name="enter_the_cost">Enter the cost</string>
</resources>